--- a/pkg/admin/gui/front_end/html/typeCredential.html
+++ b/pkg/admin/gui/front_end/html/typeCredential.html
@@ -2,7 +2,7 @@
 <div id="addPasswordType" class="CredentialPartnerBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
     <div class="form-input">
-        <label class="col-form-label">Valeur 1 :</label>
+        <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
             <input type="password" id="addCredentialPartnerValue" name="addCredentialPartnerValue" class="form-control">
             <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('addCredentialPartnerValue', this)"><i class="far fa-eye-slash"></i></button>
@@ -15,7 +15,7 @@
 <div id="addFileType" class="CredentialPartnerBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
     <div class="form-input">
-        <label class="col-form-label">Valeur 1 :</label>
+        <label class="col-form-label">{{ index .tab "selectYourFile" }} :</label>
         <input type="file" name="addCredentialPartnerFile" class="form-control">
         <input type="hidden" id="addCredentialPartnerValueFile" name="addCredentialPartnerValueFile">
     </div>
@@ -27,7 +27,7 @@
 <div id="editPasswordType_{{ .ID }}" class="CredentialPartnerBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
     <div class="form-input">
-        <label class="col-form-label">Valeur 1 :</label>
+        <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
             <input type="password" id="editCredentialPartnerValue" name="editCredentialPartnerValue" class="form-control">
             <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editCredentialPartnerValue', this)"><i class="far fa-eye-slash"></i></button>
@@ -40,7 +40,7 @@
 <div id="editFileType_{{ .ID }}" class="CredentialPartnerBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
     <div class="form-input">
-        <label class="col-form-label">Valeur 1 :</label>
+        <label class="col-form-label">{{ index .tab "selectYourFile" }} :</label>
         <input type="file" name="editCredentialPartnerFile" class="form-control">
         <input type="hidden" id="editCredentialPartnerValueFile" name="editCredentialPartnerValueFile">
     </div>
