--- a/pkg/admin/gui/front_end/html/user_management_page.html
+++ b/pkg/admin/gui/front_end/html/user_management_page.html
@@ -9,7 +9,12 @@
 
 
 {{ define "content" }}
-    <h2>{{ index .tab "title" }}</h2>
+    <div class="d-flex align-items-center justify-content-between">
+        <h2 class="mb-0">{{ index .tab "title" }}</h2>
+        <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='home'">
+          <i class="bi bi-arrow-left"></i>
+        </button>
+      </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
     
     {{ if contains .myPermission.Users "w" }}
