--- a/pkg/admin/gui/front_end/html/partner_management_page.html
+++ b/pkg/admin/gui/front_end/html/partner_management_page.html
@@ -9,7 +9,12 @@
 {{ end }}
 
 {{ define "content" }}
-    <h2>{{ index .tab "title" }}</h2>
+    <div class="d-flex align-items-center justify-content-between">
+        <h2 class="mb-0">{{ index .tab "title" }}</h2>
+        <button class="btn btn-outline-secondary ms-3 back-btn" type="button" onclick="window.location='home'">
+          <i class="bi bi-arrow-left"></i>
+        </button>
+      </div>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
 
     {{ if contains .myPermission.Partners "w" }}
@@ -211,7 +216,7 @@
                 <a class="btn btn-outline-warning btn-sm me-1" href="partner_authentication?partnerID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipPartnerAuthentication" }}">
                   <i class="bi bi-shield-lock"></i>
                 </a>
-                <a class="btn btn-outline-info btn-sm me-1" href="remote_account_management" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipRemoteAccountManagement" }}">
+                <a class="btn btn-outline-info btn-sm me-1" href="remote_account_management?partnerID={{ .ID }}" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipRemoteAccountManagement" }}">
                   <i class="bi bi-person-gear"></i>
                 </a>
                 {{ if contains $.myPermission.Partners "w" }}
