feat/cleanup project

--- a/pkg/admin/gui/front-end/html/header.html
+++ b/pkg/admin/gui/front-end/html/header.html
@@ -1,16 +1,5 @@
 {{ define "header" }}
-<style>
-  .nav-pills .nav-link.text-white {
-    border-radius: 13px;
-  }
-  .nav-pills .nav-link.text-white:hover,
-  .nav-pills .nav-link.text-white:focus {
-    background-color: #fff;
-    color: #f54b15 !important;
-    transition: background 0.2s, color 0.2s;
-    border-radius: 13px;
-  }
-</style>
+  <link rel="stylesheet" href="/webui/static/css/style.css">
   <header class="py-2 mb-4 border-bottom" style="background-color: #f54b15 !important;">
     <div class="container d-flex w-100 align-items-center justify-content-between">
       <a href="home" class="d-flex align-items-center text-decoration-none text-white">
