--- a/pkg/admin/gui/front-end/html/login_page.html
+++ b/pkg/admin/gui/front-end/html/login_page.html
@@ -1,10 +1,10 @@
 {{ define "login_page" }}
 <!DOCTYPE html>
   <head>
-    <title>{{ index .tab "title" }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/webui/static/assets/waarp_logo.png">
-    <link rel="stylesheet" href="/webui/static/css/login_page.css">
+  <title>{{ index .tab "title" }}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="/webui/static/assets/waarp_logo.png">
+  <link rel="stylesheet" href="/webui/static/css/style.css">
 </head>
 
   <body class="bg-light d-flex flex-column justify-content-center" style="min-height: 100vh;">
@@ -29,9 +29,6 @@
             {{ .Error }}
           </div>
         {{ end }}
-        <div class="text-center mt-3">
-          <a href="forgot-password" class="forgot-link text-decoration-none text-body fw-semibold">{{ index .tab "forgotPassword" }}</a>
-        </div>
       </form>
     </div>
   </body>
