--- a/pkg/admin/gui/front-end/html/multi_language.html
+++ b/pkg/admin/gui/front-end/html/multi_language.html
@@ -1,7 +1,7 @@
 {{ define "multi_language" }}
 <!DOCTYPE html>
-  <head>
-    <link rel="stylesheet" href="/webui/static/css/multi_language.css">
+<head>
+  <link rel="stylesheet" href="/webui/static/css/style.css">
 </head>
 <div style="position: absolute; top: 10px; right: 20px;">
   <form method="GET" id="dropDownLanguage">
