--- a/pkg/admin/gui/front-end/html/remote_account_management_page.html
+++ b/pkg/admin/gui/front-end/html/remote_account_management_page.html
@@ -1,8 +1,8 @@
 {{ define "head" }}
     <title>{{ index .tab "title" }}</title>
-    <link rel="stylesheet" href="/webui/static/css/partner_management_page.css">
+    <link rel="stylesheet" href="/webui/static/css/style.css">
     <script src="/webui/static/javaScript/autoCompleteSearch.js"></script>
-    <script src="/webui/static/javaScript/partner_management_page.js"></script>
+    <script src="/webui/static/javaScript/tooltip.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 {{ end }}
 
