--- a/pkg/admin/gui/front-end/html/user_management_page.html
+++ b/pkg/admin/gui/front-end/html/user_management_page.html
@@ -1,12 +1,13 @@
 {{ define "head" }}
-<title>{{ index .tab "title" }}</title>
-<link rel="stylesheet" href="/webui/static/css/user_management_page.css">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-<script src="/webui/static/javaScript/user_management_page.js"></script>
-<script src="/webui/static/javaScript/autoCompleteSearch.js"></script>
-<script src="/webui/static/javaScript/eyePassword.js"></script>
+    <title>{{ index .tab "title" }}</title>
+    <link rel="stylesheet" href="/webui/static/css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <script src="/webui/static/javaScript/user_management_page.js"></script>
+    <script src="/webui/static/javaScript/autoCompleteSearch.js"></script>
+    <script src="/webui/static/javaScript/eyePassword.js"></script>
+    <script src="/webui/static/javaScript/confirmPassword.js"></script>
+    <script src="/webui/static/javaScript/tooltip.js"></script>
 {{ end }}
-
 
 {{ define "content" }}
     <div class="d-flex align-items-center justify-content-between">
