--- a/pkg/admin/gui/front-end/html/typeCredential.html
+++ b/pkg/admin/gui/front-end/html/typeCredential.html
@@ -1,48 +1,109 @@
-{{ define "addPasswordType" }}
-<div id="addPasswordType" class="CredentialPartnerBlock" style="display:none;">
+{{ define "addTextType" }}
+<div id="addTextType" class="CredentialBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
-            <input type="password" id="addCredentialPartnerValue" name="addCredentialPartnerValue" class="form-control">
-            <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('addCredentialPartnerValue', this)"><i class="far fa-eye-slash"></i></button>
+            <input type="password" id="addCredentialValue" name="addCredentialValue" class="form-control">
+            <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('addCredentialValue', this)"><i class="far fa-eye-slash"></i></button>
+        </div>
+    </div>
+</div>
+{{ end }}
+
+{{ define "editTextType" }}
+<div id="editTextType_{{ .ID }}" class="CredentialBlock" style="display:none;">
+    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <div class="form-input">
+        <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
+        <div class="input-group">
+            <input type="password" id="editCredentialValue" name="editCredentialValue" class="form-control">
+            <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editCredentialValue', this)"><i class="far fa-eye-slash"></i></button>
         </div>
     </div>
 </div>
 {{ end }}
 
 {{ define "addFileType" }}
-<div id="addFileType" class="CredentialPartnerBlock" style="display:none;">
+<div id="addFileType" class="CredentialBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "selectYourFile" }} :</label>
-        <input type="file" name="addCredentialPartnerFile" class="form-control">
-        <input type="hidden" id="addCredentialPartnerValueFile" name="addCredentialPartnerValueFile">
-    </div>
-</div>
-{{ end }}
-
-
-{{ define "editPasswordType" }}
-<div id="editPasswordType_{{ .ID }}" class="CredentialPartnerBlock" style="display:none;">
-    <hr class="mt-2" style="border-top: 1px solid #ababab;">
-    <div class="form-input">
-        <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
-        <div class="input-group">
-            <input type="password" id="editCredentialPartnerValue" name="editCredentialPartnerValue" class="form-control">
-            <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editCredentialPartnerValue', this)"><i class="far fa-eye-slash"></i></button>
-        </div>
+        <input type="file" name="addCredentialFile" class="form-control">
+        <input type="hidden" id="addCredentialValueFile" name="addCredentialValueFile">
     </div>
 </div>
 {{ end }}
 
 {{ define "editFileType" }}
-<div id="editFileType_{{ .ID }}" class="CredentialPartnerBlock" style="display:none;">
+<div id="editFileType_{{ .ID }}" class="CredentialBlock" style="display:none;">
     <hr class="mt-2" style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "selectYourFile" }} :</label>
-        <input type="file" name="editCredentialPartnerFile" class="form-control">
-        <input type="hidden" id="editCredentialPartnerValueFile" name="editCredentialPartnerValueFile">
+        <input type="file" name="editCredentialFile" class="form-control">
+        <input type="hidden" id="editCredentialValueFile" name="editCredentialValueFile">
+    </div>
+</div>
+{{ end }}
+
+{{ define "addTwoFileType" }}
+<div id="addTwoFileType" class="CredentialBlock" style="display:none;">
+    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <div class="form-input">
+        <label class="col-form-label">{{ index .tab "selectYourTlsCertificate" }} :</label>
+        <input type="file" name="addCredentialFile1" class="form-control">
+        <input type="hidden" id="addCredentialValueFile1" name="addCredentialValueFile1">
+        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <label class="col-form-label">{{ index .tab "selectYourPrivateKey" }} :</label>
+        <input type="file" name="addCredentialFile2" class="form-control">
+        <input type="hidden" id="addCredentialValueFile2" name="addCredentialValueFile2">
+    </div>
+</div>
+{{ end }}
+
+{{ define "editTwoFileType" }}
+<div id="editTwoFileType_{{ .ID }}" class="CredentialBlock" style="display:none;">
+    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <div class="form-input">
+        <label class="col-form-label">{{ index .tab "selectYourTlsCertificate" }} :</label>
+        <input type="file" name="editCredentialFile1" class="form-control">
+        <input type="hidden" id="editCredentialValueFile1" name="editCredentialValueFile1">
+        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <label class="col-form-label">{{ index .tab "selectYourPrivateKey" }} :</label>
+        <input type="file" name="editCredentialFile2" class="form-control">
+        <input type="hidden" id="editCredentialValueFile2" name="editCredentialValueFile2">
+    </div>
+</div>
+{{ end }}
+
+{{ define "addLoginAndPwdType" }}
+<div id="addLoginAndPwdType" class="CredentialBlock" style="display:none;">
+    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <div class="form-input">
+        <label class="col-form-label">{{ index .tab "login" }} :</label>
+        <input type="text" id="addCredentialValue1" name="addCredentialValue1" class="form-control">
+        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
+        <div class="input-group">
+            <input type="password" id="addCredentialValue2" name="addCredentialValue2" class="form-control">
+            <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('addCredentialValue2', this)"><i class="far fa-eye-slash"></i></button>
+        </div>
+    </div>
+</div>
+{{ end }}
+
+{{ define "editLoginAndPwdType" }}
+<div id="editLoginAndPwdType_{{ .ID }}" class="CredentialBlock" style="display:none;">
+    <hr class="mt-2" style="border-top: 1px solid #ababab;">
+    <div class="form-input">
+        <label class="col-form-label">{{ index .tab "login" }} :</label>
+        <input type="text" id="editCredentialValue1" name="editCredentialValue1" class="form-control">
+        <hr class="mt-2" style="border-top: 1px solid #ababab;">
+        <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
+        <div class="input-group">
+            <input type="password" id="editCredentialValue2" name="editCredentialValue2" class="form-control">
+            <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editCredentialValue2_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
+        </div>
     </div>
 </div>
 {{ end }}
