--- a/pkg/admin/gui/front-end/html/login_page.html
+++ b/pkg/admin/gui/front-end/html/login_page.html
@@ -3,6 +3,8 @@
   <head>
   <title>{{ index .tab "title" }}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <script src="/webui/static/javaScript/eyePassword.js"></script>
   <link rel="icon" type="image/png" href="/webui/static/assets/waarp_logo.png">
   <link rel="stylesheet" href="/webui/static/css/style.css">
 </head>
@@ -21,7 +23,10 @@
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">{{ index .tab "password" }}</label>
-          <input type="password" class="form-control" id="password" name="password" required>
+          <div class="input-group">
+              <input type="password" id="password" name="password" class="form-control" required>
+              <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('password', this)"><i class="far fa-eye-slash"></i></button>
+          </div>
         </div>
         <button type="submit" class="btn btn-connexion w-100">{{ index .tab "submit" }}</button>
         {{ if .Error }}
