feat/add server managagement page (with pagination and list)

--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -40,7 +40,7 @@
     </a>
   </div>
   <div class="col-sm-4">
-    <a href="managing_local_servers.html" class="text-decoration-none text-dark">
+    <a href="server_management" class="text-decoration-none text-dark">
       <div class="card text-center p-3">
         <i class="bi bi-hdd-stack-fill fs-2"></i>
         <div>{{ index .tab "managing_local_servers" }}</div>
